scss/main.scss
@import "const";

h1{
    font-size: 2.5rem;
    color: $two;
    font-family: $headingFont;
}
.img-fluid{
    max-width: 100%;
    height: auto;
}
.home{
    position: relative;
    height: 100vh;
    min-height: 500px;
    max-height: 1000px;
}
.home-info{
    position: relative;
    padding: 4em 0 0 6em;
    z-index: 3; 
    mix-blend-mode: multiply;
    &:before{
        content: "";
        display: block;
        position: absolute;
        left: 0;
        background: $two;
        width: 5em;
        height: 6em;
    }
    h1{
        line-height: 1em;
    }
    p{
        color:$three;
        margin: 0 0 -.5em 1.8em;
    }
    @media(min-width: $sm){
        padding: 8em 0 0 12em;
        &:before{
            height: 4em;
            top: 8em;
        }
    }
    @media(min-width: $md){
        padding: 8em 0 0 16em;
    }
    @media(min-width: $xl){
        &:before{
            height: 6em;
            top: 7em;
            width: 12em;
        }
    }
}
.home-img{
    position: absolute;
    // top: 3em;
    right: 0;
    width: auto;
    z-index: 2;
    img{
        max-height: 18em;
    }
    @media(min-width: $sm){
        top: 0;
    }
    @media only screen and (min-width: $lg) and (orientation:landscape){
        img{
            max-height: 20em;
        }
    }
    @media(min-width: $lg){
        img{
            max-height: none;
        }
    }
    
}
.banner{
    position: absolute;
    display: flex;
    bottom: 2em;
    width: 90%;
    background: #373737;
    .banner-img{
        width: 12em;
        height: 12em;
        background: url('../img/bg.png')
    }
    a{
        align-self: center;
        margin: 3em auto;
        position: relative;
        white-space: nowrap;
        color: $one;
        z-index: 3;
        mix-blend-mode: difference;
        &:before{
            content:'';
            position: absolute;
            height: 3em;
            width: 82%;
            left:-1em;
            top: -1em;
            border: 1px solid $one;
        }
    }
    @media (min-width: $sm){
        width: 85%;
    }
    @media (min-width: $md){
        bottom: 1em;
    }
    @media (min-width: $xl){
        width: 80%;
    }
}
.teaching{
    position: relative;
    min-height: 7em;
    padding: .5em 1em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-content: center;
    align-items: center;
    h2{
        display: none;
        position: absolute;
        right: 0;
        font-size: 4em;
        color: $one;
        line-height: 1em;
        margin: 0;
        z-index: -1;
        font-family: $headingFont;
    }
    a{
        min-width: 100%;
        min-height: 7em;
        display: flex;
        justify-content: center;
        align-content: center;
        flex-direction: column;
        margin: 1em 1em;
        padding: .5em;
        border: 1px solid $two;
    }
    @media (min-width: $sm){
        h2{
            display: inline;
            font-size: 6em;
        }
        a{
            min-width: auto;
        }
    }
    @media (min-width: $md){
        min-height: 9em;
        h2{
            font-size: 8.5em;
        }
        a{
            min-height: 9em;
            max-width: 12em;
        }
    }
    @media (min-width: $xl){
        min-height: 10em;
        padding: 1em 0;
        h2{
            font-size: 9.5em;
        }
        a{
            min-height: 10em;
            max-width: 15em;
        }
    }
}

.articles{
    position: relative;
    overflow: hidden;
    h2{
        font-size: 3em;
        font-family: $headingFont;
        padding: 0 2em;
        color: $two;
    }
    .articles-years{
        position: absolute;
        top: 0;
        left: 70px;
        padding: 0 1em 0 4em ;
        text-transform: uppercase;
        transform: rotate(90deg);
        transform-origin: left top 0;
        z-index: 10;
        background: $one;
        &:before{
            content:'';
            position: relative;
            width: 100%;

        }
        .articles-year{
            display: inline-block;
            vertical-align: middle;
            line-height: 70px;
            letter-spacing: 3px;
            padding: 0 .5em;
            position: relative;
            cursor: pointer;
            span{
                display: inline-block;
                vertical-align: middle;
                position: relative;
                z-index: 1;
                transform: rotate(180deg);
            }
        }
        .active{
            background: $two;
            color: white;
        }
    }
    .articles-content{
        position: relative;
        width: 100%;
        z-index: 1;
        display: flex;
        transition-property: transform;
        max-width: 100%;
        padding: 1em 1em 1em 5em;
        .articles-content_year{
            display: none;
            height: auto;
            p{
                font-weight: .9em;
                padding-bottom: 1em;
                line-height: 1.5em;
            }
            p:last-child{
                padding: 0;
            }
        }
        .active{
            display: block
        }
    }
}
.contact{
    width: 100%;
    min-height: 12em;
    padding: 1em;
    text-align: right;
    background-image: url(../img/contact.jpg);
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #f7f7f7;
    a{
        white-space: nowrap;
        display: block;
        padding: 1em 0;
        color: $two;
        mix-blend-mode: multiply;
        span{
            padding-right: .5em;
        }
    }
    @media (min-width: $md){
        padding: 1em 1em 1em 12em;
        text-align: center;
    }
}

